added action help

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -127,7 +127,7 @@
             <div class="contact-info">
                 <p>If you have questions about this Privacy Policy, please contact us at:</p>
                 <ul>
-                    <li>Email: todoable.app@gmail.com</li>
+                    <li>Email: sparq.app@icloud.com</li>
                 </ul>
             </div>
         </div>
