--- a/terms/index.html
+++ b/terms/index.html
@@ -130,7 +130,7 @@
             <div class="contact-info">
                 <p>For questions about these terms:</p>
                 <ul>
-                    <li>Email: todoable.app@gmail.com</li>
+                    <li>Email: sparq.app@icloud.com</li>
                 </ul>
             </div>
         </div>
