--- a/help/actions.html
+++ b/help/actions.html
@@ -89,34 +89,31 @@
 								 Give your action a clear, memorable title that describes what it does. This name is crucial because Siri will use it to recognize your voice commands, and it will appear in the Shortcuts app. Choose something easy to say and remember, like "Tell Mom I'm coming" or "Send location to work."
 							</li>
 							<li>
+								<h3>Select Action Color</h3>
+									Pick a color to personalize your action. This will help you quickly identify your actions visually.
+							</li>
+							<li>
 								<h3>Choose Contact</h3>
 								Select the person you want to message from your Sparq contacts. All your contacts have already been imported or added manually to the app, so simply browse through the list to find the right person.
               </li>
               <li>
 								<h3>Pick Messaging Service</h3>
-								Select which platform you want to use for sending the message. Currently available options include iMessage, WhatsApp, Telegram, and Viber, with more messaging services being added in future updates. Choose the service your contact uses most frequently.
+								Select which platform you want to use for sending the message. Currently available options include iMessage, WhatsApp, Telegram, and Viber, with more messaging services being added in future updates.
 							</li>
               <li>
 								<h3>Select Contact Number</h3>
-								If your chosen contact has multiple phone numbers, pick the specific number associated with their account on your selected messaging service. This ensures your message reaches them on the right platform.								           	
+								If your chosen contact has multiple phone numbers, pick the specific number associated with their account on your selected messaging service.
               </li>
 							<li>
 								<h3>Choose Your Message</h3>
-								Pick from your pre-written messages that are already saved in Sparq. Simply select the message that fits your needs, whether it's a quick response, greeting, or status update. You can also choose messages that include your current location if you want to share where you are.
-							</li>
-							<li>
-								<h3>Save Your Action</h3>
-								Make sure to press the "Save" button to store your action and make it ready for use.
+								Pick from your pre-written messages that are already saved in Sparq. Simply select the message that fits your needs, whether it's a quick response, greeting, or status update. You can also choose messages that include your current location if you want to share where you are (pro).
 							</li>
             </ul>
-					</div>
-					
+					</div>					
 					<div>
-
-						<p>Once set up, you can <strong>run</strong> this action with a <strong>single tap</strong> from your phone or watch, or by asking Siri using the name you chose in step 1.</p>
+						<p>Make sure to press the "Save" button to store your action and make it ready for use.
+						<br>Once set up, you can <strong>run</strong> this action with a <strong>single tap</strong> from your phone or watch, or by asking Siri using the name you chose in step 1.</p>
 						<p>Now, just select your choices to complete the action setup!</p>
-
-
     </div>
-</body>
+	</body>
 </html>
