--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <a href="#platforms">Platforms</a>
         <a href="#privacy">Privacy</a>
         <a href="#support">Support</a>
-        <a href="./help/">Help</a>
+        <a href="./help/actions.html">Help</a>
       </nav>
     </div>
   </header>
