--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <div class="actions">
             <!-- Replace with actual App Store badge/link when available -->
             <a class="btn primary" href="#" aria-disabled="true">Get on the App Store</a>
-            <a class="btn" href="./help/">Read the Help Guide</a>
+            <a class="btn" href="./help/actions.html">Read the Help Guide</a>
           </div>
         </div>
       </div>
