--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
       <nav class="nav-links" aria-label="Primary">
         <a href="#features">Features</a>
         <a href="#platforms">Platforms</a>
-        <a href="#privacy">Privacy</a>
-        <a href="#support">Support</a>
+        <a href="./privacy/">Privacy</a>
+        <a href="./terms/">Terms</a>
         <a href="./help/actions.html">Help</a>
       </nav>
     </div>
