--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="nav-inner">
       <a class="brand" href="./">
         <div class="brand-logo" aria-hidden="true"></div>
-        <div class="brand-name">Sparq</div>
+        <div class="brand-name">Sparq — Quick Messaging</div>
       </a>
       <nav class="nav-links" aria-label="Primary">
         <a href="#features">Features</a>
