--- a/index.html
+++ b/index.html
@@ -143,11 +143,8 @@
         <div class="brand-name">Sparq — Quick Messaging</div>
       </a>
       <nav class="nav-links" aria-label="Primary">
-        <a href="#features">Features</a>
-        <a href="#platforms">Platforms</a>
         <a href="./privacy/">Privacy</a>
         <a href="./terms/">Terms</a>
-        <a href="./help/actions.html">Help</a>
       </nav>
     </div>
   </header>
@@ -156,8 +153,19 @@
     <section class="hero" aria-labelledby="title">
       <div class="headline">
         <div>
-          <h1 id="title" class="title">Quick messaging for iOS and watchOS</h1>
-          <p class="subtitle">Sparq makes short, frequent communication effortless with a SwiftUI experience tuned for speed, glanceability, and on-wrist replies.</p>
+          <h1 id="title" class="title">Quick messaging</h1>
+          <p class="subtitle">Sparq is the fastest way to send messages when you don’t have time to type. With Sparq, you create your own quick replies and use them instantly with your contacts — making conversations fast, easy, and effortless. Whether you’re on the go, in a meeting, or just need to respond right away, Sparq keeps you connected in seconds.</p>
+          <li>
+            <ul>Create and customize your favorite quick replies</ul>
+            <ul>Send them instantly with just a tap</ul>
+            <ul>Optimized for iOS and watchOS so you can reply right from your wrist</ul>
+            <ul>Quick & secure message shortcuts</ul>
+            <ul>Stay connected without the hassle of typing or long chats</ul>
+          </li>
+<p class="subtitle"> 
+Sparq is all about lightning-fast, secure communication that fits seamlessly into your busy life. With a sleek, intuitive design optimized for both iOS and watchOS, Sparq makes staying in touch simple, convenient, and reliable.
+Currently, Sparq works seamlessly with Apple Messages, WhatsApp, Telegram, and Viber, unifying your favorite chats in one place. And we’re just getting started: support for more services is on the way, so you can connect however and wherever you like.
+Download Sparq today and experience messaging without limits!</p>
           <div class="actions">
             <!-- Replace with actual App Store badge/link when available -->
             <a class="btn primary" href="#" aria-disabled="true">Get on the App Store</a>
