--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
         <div>
           <h1 id="title" class="title">Quick messaging</h1>
           <p class="subtitle">Sparq is the fastest way to send messages when you don’t have time to type. With Sparq, you create your own quick replies and use them instantly with your contacts — making conversations fast, easy, and effortless. Whether you’re on the go, in a meeting, or just need to respond right away, Sparq keeps you connected in seconds.</p>
-          <li>
-            <ul>Create and customize your favorite quick replies</ul>
-            <ul>Send them instantly with just a tap</ul>
-            <ul>Optimized for iOS and watchOS so you can reply right from your wrist</ul>
-            <ul>Quick & secure message shortcuts</ul>
-            <ul>Stay connected without the hassle of typing or long chats</ul>
-          </li>
+          <ul>
+            <li>Create and customize your favorite quick replies</li>
+            <li>Send them instantly with just a tap</li>
+            <li>Optimized for iOS and watchOS so you can reply right from your wrist</li>
+            <li>Quick & secure message shortcuts</li>
+            <li>Stay connected without the hassle of typing or long chats</li>
+          </ul>
 <p class="subtitle"> 
 Sparq is all about lightning-fast, secure communication that fits seamlessly into your busy life. With a sleek, intuitive design optimized for both iOS and watchOS, Sparq makes staying in touch simple, convenient, and reliable.
 Currently, Sparq works seamlessly with Apple Messages, WhatsApp, Telegram, and Viber, unifying your favorite chats in one place. And we’re just getting started: support for more services is on the way, so you can connect however and wherever you like.
