--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
       <div class="headline">
         <div>
           <h1 id="title" class="title">Quick messaging</h1>
-          <p class="subtitle">Sparq is the fastest way to send messages when you don’t have time to type. With Sparq, you create your own quick replies and use them instantly with your contacts — making conversations fast, easy, and effortless. Whether you’re on the go, in a meeting, or just need to respond right away, Sparq keeps you connected in seconds.</p>
+          <p class="subtitle">Sparq is the fastest way to send messages when you don’t have time to type.</p>
+          <p class="subtitle">With Sparq, you create your own quick replies and use them instantly with your contacts, making conversations fast, easy, and effortless.</p>
+          <p class="subtitle">Whether you’re on the go, in a meeting, or just need to respond right away, Sparq keeps you connected in seconds.</p>
           <ul>
             <li>Create and customize your favorite quick replies</li>
             <li>Send them instantly with just a tap</li>
@@ -162,10 +164,9 @@
             <li>Quick & secure message shortcuts</li>
             <li>Stay connected without the hassle of typing or long chats</li>
           </ul>
-<p class="subtitle"> 
-Sparq is all about lightning-fast, secure communication that fits seamlessly into your busy life. With a sleek, intuitive design optimized for both iOS and watchOS, Sparq makes staying in touch simple, convenient, and reliable.
-Currently, Sparq works seamlessly with Apple Messages, WhatsApp, Telegram, and Viber, unifying your favorite chats in one place. And we’re just getting started: support for more services is on the way, so you can connect however and wherever you like.
-Download Sparq today and experience messaging without limits!</p>
+<p class="subtitle">Sparq is all about lightning-fast, secure communication that fits seamlessly into your busy life. With a sleek, intuitive design optimized for both iOS and watchOS, Sparq makes staying in touch simple, convenient, and reliable.</p>
+<p class="subtitle">Currently, Sparq works seamlessly with Apple Messages, WhatsApp, Telegram, and Viber, unifying your favorite chats in one place. And we’re just getting started: support for more services is on the way, so you can connect however and wherever you like.</p>
+<p class="subtitle">Download Sparq today and experience messaging without limits!</p>
           <div class="actions">
             <!-- Replace with actual App Store badge/link when available -->
             <a class="btn primary" href="#" aria-disabled="true">Get on the App Store</a>
