--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <!-- Top: app icon + name (left), Privacy/Terms (right) -->
     <header class="topbar" role="banner">
       <a class="brand" href="./">
-        <img src="./assets/icon.png" alt="Sparq app icon" />
+        <img src="./images/webicon.png" alt="Sparq app icon" />
         <span class="name">Sparq Quick Messages</span>
       </a>
       <nav class="toplinks" aria-label="Legal">
