added appstore link

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       margin-top: 12px;
     }
     .store-badge img {
-      height: 40px;         /* meets Apple’s minimum onscreen guidance */
+      height: 60px;         /* meets Apple’s minimum onscreen guidance */
       width: auto;
     }
     /* Lists */
@@ -190,11 +190,12 @@
     <section class="section" aria-labelledby="download">
       <h2 id="download">Get Sparq</h2>
       <!-- Replace the href and badge with your official App Store link and downloaded badge -->
-      <a class="store-badge" href="https://apps.apple.com/app/idXXXXXXXXX" rel="noopener">
-        <img src="./assets/app-store-badge.svg" alt="Download on the App Store" />
+      <a class="store-badge" href="https://apps.apple.com/us/app/sparq-quick-messages/id6743850240" rel="noopener">
+        <img src="./images/appstore_badge.svg" alt="Download on the App Store" />
       </a>
 			<p class="subtitle">Download Sparq today and experience messaging without limits!</p>
     </section>
   </div>
 </body>
 </html>
+
